syntax = "proto3";

package blog;

service BlogService {
  rpc ListBlogs(ListBlogsRequest) returns (ListBlogsResponse) {}

  rpc GetBlog(GetBlogRequest) returns (Blog) {}

  rpc CreateBlog(CreateBlogRequest) returns (Blog) {}

  rpc UpdateBlog(UpdateBlogRequest) returns (Blog) {}

  rpc DeleteBlog(DeleteBlogRequest) returns (Empty) {}
}

//Empty
message Empty {}

// Blog Model
message Blog{
    int32 id = 1;
    string title = 2;
    string content = 3;
    string image = 4;
    string createdBy = 5;
    string createdAt = 6;
    repeated string tags = 7;
}

// Request Models
message ListBlogsRequest{
    optional int32 page = 1;
    optional int32 perPageCount = 2;
    repeated string tags = 3;
}

message GetBlogRequest{
    int32 id = 1;
}

message CreateBlogRequest{
    string title = 1;
    string content = 2;
    string image = 3;
    repeated string tags = 4;
}

message UpdateBlogRequest{
    int32 id = 1;
    string title = 2;
    string content = 3;
    string image = 4;
    repeated string tags = 5;
}

message DeleteBlogRequest{
    int32 id = 1;
}

// Response Models

message ListBlogsResponse {
    int32 page = 1;
    int32 count = 2;
    repeated Blog blogs = 3;
}